--- a/main/Main.ipynb
+++ b/main/Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,8 @@
     "from tqdm import tqdm\n",
     "import subprocess\n",
     "import platform\n",
-    "import threading"
+    "import threading\n",
+    "import jsonschema\n"
    ]
   },
   {
@@ -217,13 +218,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
-    "BRACKET_SCRIPT_PATH ='./scripts/prepare.sh'\n",
-    "SOURCE_JSON = './dataset/DG/o1_witness'\n",
-    "DESTINATION_BRACKET = './dataset/bracket/DG/o1_witness'"
+    "BRACKET_SCRIPT_PATH ='./scripts/prepare.sh'"
    ]
   },
   {
@@ -18556,9 +18555,331 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "SCHEMAS_PATH = './dataset/schemas'\n",
+    "CORRECT_INSTANCES_BRACKET_PATH = './dataset/bracket/correct-instances'\n",
+    "EXPERIMENT_SCRIPT = './scripts/expr.sh'\n",
+    "RESULTS_FILE = './results/results.csv'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "witnesses = ['DG','JE','JSF']\n",
+    "witnesses_edit_distances = [f'{x}_ted'for x in witnesses ]\n",
+    "witnesses_number_errors = [f'{x}_number_errors'for x in witnesses ]\n",
+    "witnesses_dirs = [f'./dataset/{x}'for x in witnesses ]\n",
+    "witnesses_bracket_dirs = [f'./dataset/bracket/{x}'for x in witnesses ]\n",
+    "columns = ['schema']+ witnesses_edit_distances+witnesses_number_errors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 267,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(columns=columns)\n",
+    "if not os.path.exists('./results'):\n",
+    "    os.makedirs('./results')\n",
+    "df.to_csv('./results/results.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 268,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def witness_file_name(schema_name,is_json_file=False):\n",
+    "    return schema_name+'_witness.'+ ('json' if is_json_file else 'bracket')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_edit_distance(schema_name:str,schema_bracket_path:str,w_bracket_dir)->int | None: \n",
+    "    witness_bracket_path = f'{w_bracket_dir}/{witness_file_name(schema_name)}'\n",
+    "    try:\n",
+    "        # print(witness_bracket_path)\n",
+    "        if not os.path.exists(witness_bracket_path) : \n",
+    "            raise Exception(\"File Not found\")\n",
+    "        if platform.system() == 'Windows':\n",
+    "            output = subprocess.check_output(['wsl',EXPERIMENT_SCRIPT,schema_bracket_path,witness_bracket_path])\n",
+    "        else : \n",
+    "            output = subprocess.check_output([EXPERIMENT_SCRIPT,schema_bracket_path,witness_bracket_path])\n",
+    "        output_string = output.decode().strip()\n",
+    "        result = int(output_string.split(':')[1]) # results are in this format : TED Distances: <Number>\n",
+    "        return result\n",
+    "    except Exception as e :\n",
+    "        # print(str(e)) \n",
+    "        None\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calcualte_number_errors(schema_name,witness_path):\n",
+    "    with open(f'{SCHEMAS_PATH}/{schema_name}.json','r',encoding='utf-8') as f : \n",
+    "        schema = json.load(f)\n",
+    "    \n",
+    "    if not os.path.exists(f'{witness_path}'):\n",
+    "        return None \n",
+    "    with open(witness_path,'r',encoding='utf-8') as f : \n",
+    "        data = json.load(f)\n",
+    "    validator = jsonschema.Draft7Validator(schema)\n",
+    "    return len(list(validator.iter_errors(data)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 271,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_results(schema_name:str,results:list,columns:list):\n",
+    "    df = pd.DataFrame([[schema_name]+results],columns=columns) \n",
+    "    df.to_csv(RESULTS_FILE,mode='a',index=False,header=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 272,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_schema_edit_distance_with_generators(schema:str):\n",
+    "    schema_name = schema.split('.')[0]\n",
+    "    schema_bracket_path = f'{CORRECT_INSTANCES_BRACKET_PATH}/{schema_name}.bracket'\n",
+    "    results = []\n",
+    "    # calculate the edit distance \n",
+    "    for w_gen,w_bracket_dir in zip(witnesses,witnesses_bracket_dirs): \n",
+    "        result = calculate_edit_distance(schema_name,schema_bracket_path,w_bracket_dir)\n",
+    "        results.append(result)\n",
+    "    # calculate the number of errors  \n",
+    "    for w_dir in witnesses_dirs: \n",
+    "        w_path = f'{w_dir}/{witness_file_name(schema_name,True)}'\n",
+    "        result = calcualte_number_errors(schema_name,w_path)\n",
+    "        results.append(result)\n",
+    "    print(f\"Processed {schema_name}\")\n",
+    "    save_results(schema_name,results,columns)\n",
+    "    pass  \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 274,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 10%|█         | 1/10 [00:00<00:04,  2.09it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed o1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 20%|██        | 2/10 [00:01<00:05,  1.38it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed o10008\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 30%|███       | 3/10 [00:02<00:04,  1.41it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed o10009\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 40%|████      | 4/10 [00:02<00:04,  1.45it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed o10010\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 50%|█████     | 5/10 [00:03<00:03,  1.62it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed o10011\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 60%|██████    | 6/10 [00:03<00:02,  1.94it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed o10012\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 70%|███████   | 7/10 [00:03<00:01,  2.01it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed o10013\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 80%|████████  | 8/10 [00:04<00:01,  1.94it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed o10014\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 90%|█████████ | 9/10 [00:05<00:00,  1.79it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed o10016\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:05<00:00,  1.70it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processed o10018\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for schema in tqdm(os.listdir(SCHEMAS_PATH)[:10]):\n",
+    "    process_schema_edit_distance_with_generators(schema)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   }
  ],
