added some stuff

--- a/main/Main.ipynb
+++ b/main/Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,122 @@
     "import threading\n",
     "import jsonschema\n",
     "from time import time\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>schema</th>\n",
+       "      <th>DG_ted</th>\n",
+       "      <th>JE_ted</th>\n",
+       "      <th>JSF_ted</th>\n",
+       "      <th>DG_number_errors</th>\n",
+       "      <th>JE_number_errors</th>\n",
+       "      <th>JSF_number_errors</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>o1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>o10008</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>116.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>o10009</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>o10010</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>o10011</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   schema  DG_ted  JE_ted  JSF_ted  DG_number_errors  JE_number_errors  \\\n",
+       "0      o1     0.0    14.0     60.0               0.0               0.0   \n",
+       "1  o10008     0.0   116.0      1.0               0.0               0.0   \n",
+       "2  o10009     0.0     0.0      8.0               0.0               0.0   \n",
+       "3  o10010     0.0     0.0      4.0               0.0               0.0   \n",
+       "4  o10011     0.0     2.0     10.0               0.0               2.0   \n",
+       "\n",
+       "   JSF_number_errors  \n",
+       "0                0.0  \n",
+       "1                0.0  \n",
+       "2                0.0  \n",
+       "3                0.0  \n",
+       "4                0.0  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('./results/results.csv')\n",
+    "df.head()"
    ]
   },
   {
