--- a/main/Main.ipynb
+++ b/main/Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,6 +50,10 @@
        "      <th>DG_number_errors</th>\n",
        "      <th>JE_number_errors</th>\n",
        "      <th>JSF_number_errors</th>\n",
+       "      <th>correct_instance_ast_size</th>\n",
+       "      <th>DG_ast_size</th>\n",
+       "      <th>JE_ast_size</th>\n",
+       "      <th>JSF_ast_size</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -62,6 +66,10 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>73.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -72,6 +80,10 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>155.0</td>\n",
+       "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -82,6 +94,10 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>9.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -92,6 +108,10 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -102,6 +122,10 @@
        "      <td>0.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>15.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -115,15 +139,22 @@
        "3  o10010     0.0     0.0      4.0               0.0               0.0   \n",
        "4  o10011     0.0     2.0     10.0               0.0               2.0   \n",
        "\n",
-       "   JSF_number_errors  \n",
-       "0                0.0  \n",
-       "1                0.0  \n",
-       "2                0.0  \n",
-       "3                0.0  \n",
-       "4                0.0  "
+       "   JSF_number_errors  correct_instance_ast_size  DG_ast_size  JE_ast_size  \\\n",
+       "0                0.0                          3          3.0         17.0   \n",
+       "1                0.0                          5          5.0        155.0   \n",
+       "2                0.0                          1          1.0          1.0   \n",
+       "3                0.0                          1          1.0          1.0   \n",
+       "4                0.0                          3          3.0          3.0   \n",
+       "\n",
+       "   JSF_ast_size  \n",
+       "0          73.0  \n",
+       "1           5.0  \n",
+       "2           9.0  \n",
+       "3           5.0  \n",
+       "4          15.0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,6 +162,84 @@
    "source": [
     "df = pd.read_csv('./results/results.csv')\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>schema</th>\n",
+       "      <th>DG_ted</th>\n",
+       "      <th>JE_ted</th>\n",
+       "      <th>JSF_ted</th>\n",
+       "      <th>DG_number_errors</th>\n",
+       "      <th>JE_number_errors</th>\n",
+       "      <th>JSF_number_errors</th>\n",
+       "      <th>correct_instance_ast_size</th>\n",
+       "      <th>DG_ast_size</th>\n",
+       "      <th>JE_ast_size</th>\n",
+       "      <th>JSF_ast_size</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2986</th>\n",
+       "      <td>o63193</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>154308.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>148634.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>202371.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      schema  DG_ted  JE_ted   JSF_ted  DG_number_errors  JE_number_errors  \\\n",
+       "2986  o63193     0.0     NaN  154308.0               0.0               NaN   \n",
+       "\n",
+       "      JSF_number_errors  correct_instance_ast_size  DG_ast_size  JE_ast_size  \\\n",
+       "2986           148634.0                          1          1.0          NaN   \n",
+       "\n",
+       "      JSF_ast_size  \n",
+       "2986      202371.0  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['JSF_number_errors']>10000]"
    ]
   },
   {
