--- a/main/Stats.ipynb
+++ b/main/Stats.ipynb
@@ -831,6 +831,7 @@
    ],
    "source": [
     "# Créer un graphique montrant la relation entre la distance d'édition et la taille des instances correctes\n",
+    "# !à enlever \n",
     "plt.scatter(df['DG_ted'], df['correct_instance_ast_size'], label='DG')\n",
     "plt.scatter(df['JE_ted'], df['correct_instance_ast_size'], label='JE')\n",
     "plt.scatter(df['JSF_ted'], df['correct_instance_ast_size'], label='JSF')\n",
