added some stuff

--- a/rapport/bibliographie.bib
+++ b/rapport/bibliographie.bib
@@ -4,7 +4,12 @@
 %?################### TRAITEMENT D'IMAGES ################### 
 %TODO     INTRODUCTION
 
+@Report{not_elimination,
+author = {Mohamed Amine Baazizi et al},
+title = { Not Elimination and Witness Generation for JSON Schema. BDA},
+year = {2020}
 
+}
 @article{JEDI,
 author = {Hütter, Thomas and Augsten, Nikolaus and Kirsch, Christoph and Carey, Michael and Li, Chen},
 year = {2022},
