playing with kschon validator

--- a/experiments/validation/Main.ipynb
+++ b/experiments/validation/Main.ipynb
@@ -2,87 +2,144 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import jsonschema\n",
-    "import os \n",
-    "import json"
+    "!pip install jschon"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calcualte_number_errors(path):\n",
-    "    with open(f'{path}/schema.json','r',encoding='utf-8') as f : \n",
-    "        schema = json.load(f)\n",
-    "    witness_path = f'{path}/instance.json'\n",
-    "    if not os.path.exists(witness_path):\n",
-    "        return None \n",
-    "    try : \n",
-    "        with open(witness_path,'r',encoding='utf-8') as f : \n",
-    "            data = json.load(f)\n",
-    "    except :\n",
-    "        return None\n",
-    "    try : \n",
-    "        validator = jsonschema.Draft7Validator(schema)\n",
-    "        print(list(validator.iter_errors(data)))\n",
-    "        for error in validator.iter_errors(data): \n",
-    "            print(error)\n",
-    "        return len(list(validator.iter_errors(data)))\n",
-    "    except Exception as e : \n",
-    "        if(\"error: nothing to repeat at position 1\" in str(e)) : # error appearing somehow\n",
-    "            return 0\n",
-    "        else :\n",
-    "            return None \n",
-    "        \n",
+    "from jschon import create_catalog,JSON, JSONSchema\n",
+    "import json,os\n",
+    "import pathlib\n",
+    "import inspect\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Catalog('catalog')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "create_catalog('2020-12')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'d:\\\\Yanis\\\\FAC\\\\M1\\\\S2\\\\PSTL\\\\experiments\\\\validation'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.dirname(os.path.abspath(\"__file__\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "src_file_path = os.path.dirname(os.path.abspath(\"__file__\"))\n",
+    "\n",
+    "# print(src_file_path)\n",
+    "dataset_dir =  src_file_path+'/dataset/1'\n",
+    "schema_dir = f'{dataset_dir}/schema.json'\n",
+    "instance_dir=f'{dataset_dir}/instance.json'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_errors_validation(schema_dir:str,instance_dir:str): \n",
     "    \n",
-    "# calcualte_number_errors('o33194',f'./dataset/JE/{witness_file_name(\"o33194\",True)}')"
+    "    with open(schema_dir,'r',encoding='utf-8') as f : \n",
+    "        schema= json.load(f)\n",
+    "    schema['$schema'] =\"https://json-schema.org/draft/2020-12/schema\"\n",
+    "    schema['$id'] =\"https://jschon.dev/demo\"\n",
+    "    demo_schema = JSONSchema(schema)\n",
+    "    # print(demo_schema)\n",
+    "    with open (instance_dir,'r',encoding='utf-8') as f : \n",
+    "        instance=json.load(f)\n",
+    "        \n",
+    "    result = demo_schema.evaluate(\n",
+    "        JSON(instance)\n",
+    "    )\n",
+    "    print(result.output('detailed')['errors'])\n",
+    "    return result.output('detailed')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<ValidationError: \"{'a': {'b': 12}} is not valid under any of the given schemas\">]\n",
-      "{'a': {'b': 12}} is not valid under any of the given schemas\n",
-      "\n",
-      "Failed validating 'anyOf' in schema['properties']['name']:\n",
-      "    {'anyOf': [{'description': 'Cool! We got a string here!',\n",
-      "                'properties': {'a': {'minProperties': 2,\n",
-      "                                     'properties': {'b': {'type': 'string'}},\n",
-      "                                     'required': ['b'],\n",
-      "                                     'type': 'object'}},\n",
-      "                'required': ['a'],\n",
-      "                'type': 'object'},\n",
-      "               {'type': 'integer'}]}\n",
-      "\n",
-      "On instance['name']:\n",
-      "    {'a': {'b': 12}}\n"
+      "[{'instanceLocation': '/name', 'keywordLocation': '/properties/name/anyOf', 'absoluteKeywordLocation': 'https://jschon.dev/demo#/properties/name/anyOf', 'errors': [{'instanceLocation': '/name', 'keywordLocation': '/properties/name/anyOf/0/required', 'absoluteKeywordLocation': 'https://jschon.dev/demo#/properties/name/anyOf/0/required', 'error': \"The object is missing required properties ['a']\"}, {'instanceLocation': '/name', 'keywordLocation': '/properties/name/anyOf/1/type', 'absoluteKeywordLocation': 'https://jschon.dev/demo#/properties/name/anyOf/1/type', 'error': 'The instance must be of type \"integer\"'}]}]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "1"
+       "{'valid': False,\n",
+       " 'instanceLocation': '',\n",
+       " 'keywordLocation': '',\n",
+       " 'absoluteKeywordLocation': 'https://jschon.dev/demo#',\n",
+       " 'errors': [{'instanceLocation': '/name',\n",
+       "   'keywordLocation': '/properties/name/anyOf',\n",
+       "   'absoluteKeywordLocation': 'https://jschon.dev/demo#/properties/name/anyOf',\n",
+       "   'errors': [{'instanceLocation': '/name',\n",
+       "     'keywordLocation': '/properties/name/anyOf/0/required',\n",
+       "     'absoluteKeywordLocation': 'https://jschon.dev/demo#/properties/name/anyOf/0/required',\n",
+       "     'error': \"The object is missing required properties ['a']\"},\n",
+       "    {'instanceLocation': '/name',\n",
+       "     'keywordLocation': '/properties/name/anyOf/1/type',\n",
+       "     'absoluteKeywordLocation': 'https://jschon.dev/demo#/properties/name/anyOf/1/type',\n",
+       "     'error': 'The instance must be of type \"integer\"'}]}]}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "calcualte_number_errors('./dataset/2')"
+    "\n",
+    "get_errors_validation(schema_dir,instance_dir)"
    ]
   }
  ],
