--- a/experiments/validation/Main.ipynb
+++ b/experiments/validation/Main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "Catalog('catalog')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keywords_to_avoid = ['','anyOf','oneOf','allOf','patternPropreties']\n",
+    "def extract_errors_map(error:dict, error_map:dict):\n",
+    "    if 'keywordLocation' in error:\n",
+    "        key = error['keywordLocation'].split('/')[-1]\n",
+    "        if key and key not in keywords_to_avoid:\n",
+    "            if error_map.get(key) is None : \n",
+    "                error_map[key]=[error['error']]\n",
+    "            else : \n",
+    "                error_map[key].append(error['error'])\n",
+    "    \n",
+    "    # print(\"there's still error\")\n",
+    "    if 'errors' in error:\n",
+    "        for e in error['errors']:\n",
+    "            extract_errors_map(e, error_map)\n",
+    "\n",
+    "def extract_errors(errors): \n",
+    "    error_map= {}\n",
+    "    for error in errors : \n",
+    "        extract_errors_map(error,error_map)\n",
+    "    return list(error_map.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,43 +124,26 @@
     "    result = demo_schema.evaluate(\n",
     "        JSON(instance)\n",
     "    )\n",
-    "    print(result.output('detailed')['errors'])\n",
-    "    return result.output('detailed')"
+    "    # print(result.output('detailed'))# if errors in result.output('detailed')\n",
+    "    if(result.output(\"detailed\")['valid']==False or \"errors\" in result.output(\"detailed\")): \n",
+    "        errors = extract_errors(result.output('detailed')['errors'])\n",
+    "    else : \n",
+    "        errors=[]\n",
+    "    return errors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'instanceLocation': '/name', 'keywordLocation': '/properties/name/anyOf', 'absoluteKeywordLocation': 'https://jschon.dev/demo#/properties/name/anyOf', 'errors': [{'instanceLocation': '/name', 'keywordLocation': '/properties/name/anyOf/0/required', 'absoluteKeywordLocation': 'https://jschon.dev/demo#/properties/name/anyOf/0/required', 'error': \"The object is missing required properties ['a']\"}, {'instanceLocation': '/name', 'keywordLocation': '/properties/name/anyOf/1/type', 'absoluteKeywordLocation': 'https://jschon.dev/demo#/properties/name/anyOf/1/type', 'error': 'The instance must be of type \"integer\"'}]}]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "{'valid': False,\n",
-       " 'instanceLocation': '',\n",
-       " 'keywordLocation': '',\n",
-       " 'absoluteKeywordLocation': 'https://jschon.dev/demo#',\n",
-       " 'errors': [{'instanceLocation': '/name',\n",
-       "   'keywordLocation': '/properties/name/anyOf',\n",
-       "   'absoluteKeywordLocation': 'https://jschon.dev/demo#/properties/name/anyOf',\n",
-       "   'errors': [{'instanceLocation': '/name',\n",
-       "     'keywordLocation': '/properties/name/anyOf/0/required',\n",
-       "     'absoluteKeywordLocation': 'https://jschon.dev/demo#/properties/name/anyOf/0/required',\n",
-       "     'error': \"The object is missing required properties ['a']\"},\n",
-       "    {'instanceLocation': '/name',\n",
-       "     'keywordLocation': '/properties/name/anyOf/1/type',\n",
-       "     'absoluteKeywordLocation': 'https://jschon.dev/demo#/properties/name/anyOf/1/type',\n",
-       "     'error': 'The instance must be of type \"integer\"'}]}]}"
+       "['required', 'type']"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
