--- a/experiments/validation/Main.ipynb
+++ b/experiments/validation/Main.ipynb
@@ -11,7 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install js2py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,32 +28,21 @@
     "import json,os\n",
     "import pathlib\n",
     "import inspect\n",
-    "\n"
+    "import  js2py\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Catalog('catalog')"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "create_catalog('2020-12')\n"
+    "create_catalog('2019-09')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,31 +84,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
+    "import subprocess\n",
+    "def migrate(schema):\n",
+    "    try:\n",
+    "        # Convertir le schéma JSON en chaîne JSON\n",
+    "        schema_json_str = json.dumps(schema)\n",
+    "        # Appeler le script TypeScript avec le schéma JSON en tant qu'argument\n",
+    "        command = ['ts-node', '-e', f'require(\"./migrate\").migrate({schema_json_str})']\n",
+    "        process = subprocess.Popen(command, stdout=subprocess.PIPE, stderr=subprocess.PIPE,shell=True, text=True)\n",
+    "        stdout, stderr = process.communicate()\n",
+    "        # Vérifier si une erreur s'est produite pendant l'exécution du script TypeScript\n",
+    "        if stderr:\n",
+    "            raise RuntimeError(f\"Erreur lors de l'exécution du script TypeScript : {stderr}\")\n",
+    "\n",
+    "        # Analyser la sortie JSON du résultat\n",
+    "        result = json.loads(stdout)\n",
+    "        return result\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        # print(str(e))\n",
+    "        print(f\"Une erreur s'est produite : {e}\")\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "def validate_instance(schema_dir:str,instance_dir): \n",
     "    with open(schema_dir,'r',encoding='utf-8') as f : \n",
     "        schema= json.load(f)\n",
-    "    schema['$schema'] =\"https://json-schema.org/draft/2020-12/schema\"\n",
-    "    schema['$id'] =\"https://jschon.dev/demo\"\n",
-    "    demo_schema = JSONSchema(schema)\n",
-    "    # print(demo_schema)\n",
-    "    with open (instance_dir,'r',encoding='utf-8') as f : \n",
-    "        instance=json.load(f)\n",
+    "    print(schema)\n",
+    "    translated_schema=migrate(schema)\n",
+    "    print(translated_schema)\n",
+    "    # demo_schema = JSONSchema(translated_schema)\n",
+    "    # # print(demo_schema)\n",
+    "    # with open (instance_dir,'r',encoding='utf-8') as f : \n",
+    "    #     instance=json.load(f)\n",
     "        \n",
-    "    result = demo_schema.evaluate(\n",
-    "        JSON(instance)\n",
-    "    )\n",
-    "    return result \n",
+    "    # result = demo_schema.evaluate(\n",
+    "    #     JSON(instance)\n",
+    "    # )\n",
+    "    # return result \n",
     "def get_errors_validation(schema_dir:str,instance_dir:str): \n",
     "    result = validate_instance(schema_dir,instance_dir)\n",
     "    # print(result.output('detailed'))# if errors in result.output('detailed')\n",
@@ -123,44 +146,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "src_file_path = os.path.dirname(os.path.abspath(\"__file__\"))\n",
-    "schema_path = src_file_path+'/dataset/7/schema.json'\n",
-    "instance_path = src_file_path+'/dataset/7/instance.json'\n",
-    "output = validate_instance(schema_path,instance_path).output('verbose')\n",
-    "with open(src_file_path+'/dataset/7/errors.json','w') as f: \n",
-    "    json.dump(output,f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Treating schema : 1.json\n",
-      "['required', 'type']\n",
-      "Treating schema : 2.json\n",
-      "['type', 'minProperties']\n",
-      "Treating schema : 3.json\n",
-      "['type', 'required']\n",
-      "Treating schema : 4.json\n",
-      "[]\n",
-      "Treating schema : 5.json\n",
-      "['required']\n",
-      "Treating schema : 6.json\n",
-      "['type']\n",
-      "Treating schema : 7.json\n",
-      "['type']\n"
+      "{'$schema': 'http://json-schema.org/draft-04/schema#', 'id': 'https://raw.githubusercontent.com/AlekseyBuzmakov/FCAPS/master/FCAPS/schemas/graph.json', 'title': 'Directed Graph JSON', 'description': 'Json file gives a description of a directed graph', 'type': 'array', 'items': [{'type': 'object', 'title': 'General Grap Info', 'description': 'An object contains general info about the graph', 'properties': {'NodesCount': {'title': 'Number of Nodes', 'description': 'The total number of nodes in the graph', 'type': 'integer', 'minimum': 0}, 'ArcsCount': {'title': 'Number of Arcs', 'description': 'The total number of arcs in the graph', 'type': 'integer', 'minimum': 0}}}, {'title': 'Nodes Info', 'description': 'All nodes are enumerated in this object', 'type': 'object', 'properties': {'Nodes': {'title': 'List of Nodes', 'description': 'The nodes of the graph are given within this array', 'type': 'array', 'items': {}}}, 'required': ['Nodes']}, {'title': 'Arcs Info', 'description': 'All arcs are enumerated in this object', 'type': 'object', 'properties': {'Arcs': {'title': 'List of Arcs', 'description': 'The arcs of the graph are given within this array', 'type': 'array', 'items': {'title': 'Graph Arc', 'description': 'A description of an arc of this graph', 'type': 'object', 'properties': {'S': {'title': 'Source Node', 'description': \"The source node of this arc given as an index in 'Nodes' array\", 'type': 'integer', 'minimum': 0}, 'D': {'title': 'Destination Node', 'description': \"The destination node of this arc given as an index in 'Nodes' array\", 'type': 'integer', 'minimum': 0}}, 'required': ['S', 'D']}}}, 'required': ['Arcs']}, {'title': 'Visualisation Info', 'description': 'All info that is related to graph visualisation is given here, such as vertices positions or level in concept lattices'}], 'minItems': 3}\n",
+      "{'$schema': 'https://json-schema.org/draft/2019-09/schema', '$id': 'https://raw.githubusercontent.com/AlekseyBuzmakov/FCAPS/master/FCAPS/schemas/graph.json', 'title': 'Directed Graph JSON', 'description': 'Json file gives a description of a directed graph', 'type': 'array', 'prefixItems': [{'type': 'object', 'title': 'General Grap Info', 'description': 'An object contains general info about the graph', 'properties': {'NodesCount': {'title': 'Number of Nodes', 'description': 'The total number of nodes in the graph', 'type': 'integer', 'minimum': 0}, 'ArcsCount': {'title': 'Number of Arcs', 'description': 'The total number of arcs in the graph', 'type': 'integer', 'minimum': 0}}}, {'title': 'Nodes Info', 'description': 'All nodes are enumerated in this object', 'type': 'object', 'properties': {'Nodes': {'title': 'List of Nodes', 'description': 'The nodes of the graph are given within this array', 'type': 'array', 'items': {}}}, 'required': ['Nodes']}, {'title': 'Arcs Info', 'description': 'All arcs are enumerated in this object', 'type': 'object', 'properties': {'Arcs': {'title': 'List of Arcs', 'description': 'The arcs of the graph are given within this array', 'type': 'array', 'items': {'title': 'Graph Arc', 'description': 'A description of an arc of this graph', 'type': 'object', 'properties': {'S': {'title': 'Source Node', 'description': \"The source node of this arc given as an index in 'Nodes' array\", 'type': 'integer', 'minimum': 0}, 'D': {'title': 'Destination Node', 'description': \"The destination node of this arc given as an index in 'Nodes' array\", 'type': 'integer', 'minimum': 0}}, 'required': ['S', 'D']}}}, 'required': ['Arcs']}, {'title': 'Visualisation Info', 'description': 'All info that is related to graph visualisation is given here, such as vertices positions or level in concept lattices'}], 'minItems': 3}\n"
      ]
     }
    ],
+   "source": [
+    "src_file_path = os.path.dirname(os.path.abspath(\"__file__\"))\n",
+    "schema_path = src_file_path+'/dataset/8/schema.json'\n",
+    "instance_path = src_file_path+'/dataset/8/instance.json'\n",
+    "# output = validate_instance(schema_path,instance_path).output('verbose')\n",
+    "# with open(src_file_path+'/dataset/8/errors.json','w') as f: \n",
+    "#     json.dump(output,f)\n",
+    "validate_instance(schema_path,instance_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "src_file_path = os.path.dirname(os.path.abspath(\"__file__\"))\n",
     "\n",
